--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anilist</title>
+    <title>List</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <header>
-        <h1>Anilist</h1>
+        <h1>List</h1>
         <nav>
             <a href="{{ url_for('index') }}">Home</a>
         </nav>
